--- a/app/src/main/res/layout/fragment_download.xml
+++ b/app/src/main/res/layout/fragment_download.xml
@@ -13,47 +13,21 @@
         android:id="@+id/forminfo"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:layout_centerHorizontal="true"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/form"
-        android:layout_marginTop="26dp"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/dw"
-        android:layout_below="@+id/forminfo"
-        android:layout_alignRight="@+id/instruct"
-        android:layout_alignEnd="@+id/instruct"
-        android:layout_marginRight="14dp"
-        android:layout_marginEnd="14dp" />
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/downloadbutton"
-        android:text="@string/download"
-        android:layout_alignBaseline="@+id/form"
-        android:layout_alignBottom="@+id/form"
-        android:layout_alignLeft="@+id/downloadbutton1"
-        android:layout_alignStart="@+id/downloadbutton1" />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:id="@+id/instruct"
-        android:text="@string/instruction"
-        android:layout_alignBaseline="@+id/downloadbutton1"
-        android:layout_alignBottom="@+id/downloadbutton1"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="13dp"
-        android:layout_marginStart="13dp" />
+        android:text=""
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/forminfo"
+        android:layout_marginTop="20dp"/>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/downloadbutton1"
-        android:text="@string/download"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
+        android:text=""
         android:layout_below="@+id/downloadbutton"
-        android:layout_toRightOf="@+id/instruct"
-        android:layout_toEndOf="@+id/instruct" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        />
 </RelativeLayout>
