--- a/app/src/main/res/layout/fragment_action_plan.xml
+++ b/app/src/main/res/layout/fragment_action_plan.xml
@@ -5,7 +5,8 @@
     android:layout_height="fill_parent"
     android:fillViewport="true"
     android:scrollbars = "vertical"
-    android:scrollbarStyle="insideInset">
+    android:scrollbarStyle="insideInset"
+    android:background="#0E0128">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,7 +24,7 @@
             android:layout_marginRight="7dp"
             card_view:cardCornerRadius="2dp"
             card_view:contentPadding="10dp"
-            card_view:cardBackgroundColor="#99ccff">
+            card_view:cardBackgroundColor="#443661">
 
             <RelativeLayout
                 android:layout_width="fill_parent"
@@ -35,9 +36,14 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
                     android:textStyle="bold"
-                    android:textColor="#000000"
+                    android:textColor="#ffffff"
                     android:text="Startup India Action Plan"
                     android:textSize="15dp" />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_below="@+id/next1"
+                    android:layout_height="1dp"
+                    android:background="#ffffff"/>
 
                 <TextView
                     android:id="@+id/tv2"
@@ -47,14 +53,15 @@
                     android:layout_marginTop="15dp"
                     android:textSize="10dp"
                     android:text="@string/startup_india_action_plan"
-                    android:textColor="#000000" />
+                    android:textColor="#ffffff" />
 
                 <ImageView
                     android:id="@+id/next1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/download_icon"
-                    android:layout_alignParentRight="true" />
+                    android:layout_alignParentRight="true"
+                    />
 
             </RelativeLayout>
         </android.support.v7.widget.CardView>
@@ -69,7 +76,7 @@
             android:layout_marginRight="7dp"
             card_view:cardCornerRadius="2dp"
             card_view:contentPadding="10dp"
-            card_view:cardBackgroundColor="#99ccff">
+            card_view:cardBackgroundColor="#443661">
 
             <RelativeLayout
                 android:layout_width="fill_parent"
@@ -81,7 +88,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
                     android:textStyle="bold"
-                    android:textColor="#000000"
+                    android:textColor="#ffffff"
                     android:text="Status Report"
                     android:textSize="15dp" />
 
@@ -93,7 +100,13 @@
                     android:layout_marginTop="15dp"
                     android:textSize="10dp"
                     android:text="@string/status_report"
-                    android:textColor="#000000" />
+                    android:textColor="#ffffff" />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_below="@+id/tv3"
+                    android:layout_marginTop="5dp"
+                    android:background="#ffffff"/>
 
                 <android.support.v7.widget.CardView
                     android:id="@+id/card_status_report"
@@ -112,7 +125,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
                         android:textColor="#ffffff"
-                        android:text="Status report on Startup India"
+                        android:text="   Status report on Startup India   "
                         android:textSize="10dp" />
 
                 </android.support.v7.widget.CardView>
@@ -130,7 +143,7 @@
             android:layout_marginRight="7dp"
             card_view:cardCornerRadius="2dp"
             card_view:contentPadding="10dp"
-            card_view:cardBackgroundColor="#99ccff">
+            card_view:cardBackgroundColor="#443661">
 
             <RelativeLayout
                 android:layout_width="fill_parent"
@@ -142,7 +155,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
                     android:textStyle="bold"
-                    android:textColor="#000000"
+                    android:textColor="#ffffff"
                     android:text="Notification"
                     android:textSize="15dp" />
 
@@ -154,7 +167,14 @@
                     android:layout_marginTop="15dp"
                     android:textSize="10dp"
                     android:text="@string/notification"
-                    android:textColor="#000000" />
+                    android:textColor="#ffffff" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_below="@+id/next3"
+                    android:layout_marginTop="5dp"
+                    android:background="#ffffff"/>
 
                 <ImageView
                     android:id="@+id/next3"
