--- a/app/src/main/res/layout/fragment_child_company_registration.xml
+++ b/app/src/main/res/layout/fragment_child_company_registration.xml
@@ -1,7 +1,7 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="#ccc"
+    android:background="#0E0128"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="info.androidhive.materialtabs.fragments.ChildCompanyRegistrationFragment">
@@ -12,6 +12,7 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:layout_marginTop="30dp"
         android:layout_marginLeft="20dp"
+        android:textColor="#ffffff"
         android:text="@string/purpose"/>
     <Spinner
         android:layout_width="wrap_content"
