--- a/app/src/main/res/layout/fragment_company.xml
+++ b/app/src/main/res/layout/fragment_company.xml
@@ -11,7 +11,8 @@
         android:id="@+id/tv1"
         android:layout_marginLeft="20dp"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="@string/incorporate"/>
+        android:text="@string/incorporate"
+        android:textColor="#ffffff"/>
     <Spinner
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
