--- a/app/src/main/res/layout/fragment_company_registration.xml
+++ b/app/src/main/res/layout/fragment_company_registration.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ccc"
+    android:background="#0E0128"
     tools:context="info.androidhive.materialtabs.fragments.CompanyRegistrationFragment">
     <ScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
