--- a/app/src/main/res/layout/fragment_startup_india_services.xml
+++ b/app/src/main/res/layout/fragment_startup_india_services.xml
@@ -5,7 +5,8 @@
     android:layout_height="fill_parent"
     android:fillViewport="true"
     android:scrollbars = "vertical"
-    android:scrollbarStyle="insideInset">
+    android:scrollbarStyle="insideInset"
+    android:background="#0E0128">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,7 +24,7 @@
             android:layout_marginRight="7dp"
             card_view:cardCornerRadius="2dp"
             card_view:contentPadding="10dp"
-            card_view:cardBackgroundColor="#99ccff">
+            card_view:cardBackgroundColor="#443661">
 
             <RelativeLayout
                 android:layout_width="fill_parent"
@@ -35,7 +36,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
                     android:textStyle="bold"
-                    android:textColor="#000000"
+                    android:textColor="#FFFFFF"
                     android:text="Startup Recognition"
                     android:textSize="15dp" />
 
@@ -47,14 +48,21 @@
                     android:layout_marginTop="15dp"
                     android:textSize="10dp"
                     android:text="@string/startup_recognition"
-                    android:textColor="#000000" />
+                    android:textColor="#FFFFFF" />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_below="@+id/next1"
+                    android:layout_marginTop="5dp"
+                    android:background="#ffffff"/>
 
                 <ImageView
                     android:id="@+id/next1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/next_icon"
-                    android:layout_alignParentRight="true" />
+                    android:layout_alignParentRight="true"
+                    />
 
             </RelativeLayout>
         </android.support.v7.widget.CardView>
@@ -69,7 +77,7 @@
             android:layout_marginRight="7dp"
             card_view:cardCornerRadius="2dp"
             card_view:contentPadding="10dp"
-            card_view:cardBackgroundColor="#99ccff">
+            card_view:cardBackgroundColor="#443661">
 
             <RelativeLayout
                 android:layout_width="fill_parent"
@@ -81,7 +89,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
                     android:textStyle="bold"
-                    android:textColor="#000000"
+                    android:textColor="#ffffff"
                     android:text="Startup Benefits"
                     android:textSize="15dp" />
 
@@ -93,7 +101,13 @@
                     android:layout_marginTop="15dp"
                     android:textSize="10dp"
                     android:text="@string/startup_benefits"
-                    android:textColor="#000000" />
+                    android:textColor="#ffffff" />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_below="@+id/next2"
+                    android:layout_marginTop="5dp"
+                    android:background="#ffffff"/>
 
                 <ImageView
                     android:id="@+id/next2"
@@ -115,7 +129,7 @@
             android:layout_marginRight="7dp"
             card_view:cardCornerRadius="2dp"
             card_view:contentPadding="10dp"
-            card_view:cardBackgroundColor="#99ccff">
+            card_view:cardBackgroundColor="#443661">
 
             <RelativeLayout
                 android:layout_width="fill_parent"
@@ -127,7 +141,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
                     android:textStyle="bold"
-                    android:textColor="#000000"
+                    android:textColor="#ffffff"
                     android:text="Incubator Recognition"
                     android:textSize="15dp" />
 
@@ -139,7 +153,13 @@
                     android:layout_marginTop="15dp"
                     android:textSize="10dp"
                     android:text="@string/incubator_recognition"
-                    android:textColor="#000000" />
+                    android:textColor="#ffffff" />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_below="@+id/next3"
+                    android:layout_marginTop="5dp"
+                    android:background="#ffffff"/>
 
                 <ImageView
                     android:id="@+id/next3"
@@ -161,7 +181,7 @@
             android:layout_marginRight="7dp"
             card_view:cardCornerRadius="2dp"
             card_view:contentPadding="10dp"
-            card_view:cardBackgroundColor="#99ccff">
+            card_view:cardBackgroundColor="#0E0128">
 
             <RelativeLayout
                 android:layout_width="fill_parent"
@@ -173,7 +193,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
                     android:textStyle="bold"
-                    android:textColor="#000000"
+                    android:textColor="#ffffff"
                     android:text="Advertisement"
                     android:textSize="15dp" />
 
@@ -185,7 +205,13 @@
                     android:layout_marginTop="15dp"
                     android:textSize="10dp"
                     android:text="@string/advertisement"
-                    android:textColor="#000000" />
+                    android:textColor="#ffffff" />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_below="@+id/next4"
+                    android:layout_marginTop="5dp"
+                    android:background="#ffffff"/>
 
                 <ImageView
                     android:id="@+id/next4"
