--- a/app/src/main/res/layout/activity_faqs.xml
+++ b/app/src/main/res/layout/activity_faqs.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/cardBackground">
 
     <android.support.v7.widget.Toolbar
         android:collapseContentDescription="yes"
@@ -41,7 +42,7 @@
             android:layout_marginRight="7dp"
             card_view:cardCornerRadius="20dp"
             card_view:contentPadding="10dp"
-            card_view:cardBackgroundColor="#000000">
+            card_view:cardBackgroundColor="@color/cardColor">
 
             <RelativeLayout
                 android:layout_width="fill_parent"
@@ -53,7 +54,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
                     android:textStyle="bold"
-                    android:textColor="#ffffff"
+                    android:textColor="@color/cardText"
                     android:text="FAQs on Startup India"
                     android:textSize="12dp"
                     android:layout_centerHorizontal="true"
@@ -74,7 +75,7 @@
             android:layout_marginRight="7dp"
             card_view:cardCornerRadius="20dp"
             card_view:contentPadding="10dp"
-            card_view:cardBackgroundColor="#000000">
+            card_view:cardBackgroundColor="@color/cardColor">
 
             <RelativeLayout
                 android:layout_width="fill_parent"
@@ -86,7 +87,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
                     android:textStyle="bold"
-                    android:textColor="#ffffff"
+                    android:textColor="@color/cardText"
                     android:text="FAQs on IPR Facilitation"
                     android:textSize="12dp"
                     android:layout_centerHorizontal="true"
