--- a/app/src/main/res/layout/activity_initiative_by_banks.xml
+++ b/app/src/main/res/layout/activity_initiative_by_banks.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/cardBackground">
 
     <android.support.v7.widget.Toolbar
         android:collapseContentDescription="yes"
@@ -38,7 +39,7 @@
             android:layout_marginRight="7dp"
             card_view:cardCornerRadius="2dp"
             card_view:contentPadding="10dp"
-            card_view:cardBackgroundColor="#99ccff">
+            card_view:cardBackgroundColor="@color/cardColor">
 
             <RelativeLayout
                 android:layout_width="fill_parent"
@@ -50,7 +51,7 @@
                     android:layout_height="wrap_content"
                     android:textSize="10dp"
                     android:text="@string/initiatives_by_banks"
-                    android:textColor="#000000" />
+                    android:textColor="@color/cardText" />
 
                 <TextView
                     android:id="@+id/tv_ubi"
@@ -59,7 +60,7 @@
                     android:layout_marginTop="5dp"
                     android:layout_height="wrap_content"
                     android:textStyle="bold"
-                    android:textColor="#000000"
+                    android:textColor="@color/cardText"
                     android:text="Union Bank of India"
                     android:textSize="12dp" />
 
@@ -81,7 +82,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentTop="true"
-                        android:textColor="#ffffff"
+                        android:textColor="@color/cardText"
                         android:text="Union Bank Startup Scheme"
                         android:textSize="10dp" />
 
@@ -104,7 +105,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentTop="true"
-                        android:textColor="#ffffff"
+                        android:textColor="@color/cardText"
                         android:text="Union Bank Startup Scheme(One Pager)"
                         android:textSize="10dp" />
 
