--- a/app/src/main/res/layout/fragment_appointt_director.xml
+++ b/app/src/main/res/layout/fragment_appointt_director.xml
@@ -8,6 +8,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/tv2"
         android:layout_marginLeft="20dp"
+        android:textColor="#ffffff"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/age"
         />
@@ -17,11 +18,15 @@
         android:entries="@array/ages"
         android:id="@+id/spin2"
         android:layout_toRightOf="@+id/tv2"
-        android:layout_marginLeft="100dp"/>
+        android:layout_marginLeft="100dp"
+        android:background="@drawable/spin"
+        />
+
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/agelimit"
+        android:textColor="#ffffff"
         android:id="@+id/checkbox"
         android:layout_below="@+id/tv2"
         android:layout_marginTop="20dp"
@@ -30,6 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/note"
+        android:textColor="#ffffff"
         android:layout_below="@+id/checkbox"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
