--- a/app/src/main/res/layout/fragment_events_and_news.xml
+++ b/app/src/main/res/layout/fragment_events_and_news.xml
@@ -5,7 +5,8 @@
     android:layout_height="fill_parent"
     android:fillViewport="true"
     android:scrollbars = "vertical"
-    android:scrollbarStyle="insideInset">
+    android:scrollbarStyle="insideInset"
+    android:background="#0E0128">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,7 +24,7 @@
             android:layout_marginRight="7dp"
             card_view:cardCornerRadius="2dp"
             card_view:contentPadding="10dp"
-            card_view:cardBackgroundColor="#99ccff">
+            card_view:cardBackgroundColor="#443661">
 
             <RelativeLayout
                 android:layout_width="fill_parent"
@@ -35,7 +36,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
                     android:textStyle="bold"
-                    android:textColor="#000000"
+                    android:textColor="#ffffff"
                     android:text="State's Conferences"
                     android:textSize="15dp" />
 
@@ -47,7 +48,13 @@
                     android:layout_marginTop="15dp"
                     android:textSize="10dp"
                     android:text="@string/states_conferences"
-                    android:textColor="#000000" />
+                    android:textColor="#ffffff" />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_below="@+id/ennext1"
+                    android:layout_marginTop="5dp"
+                    android:background="#ffffff"/>
 
                 <ImageView
                     android:id="@+id/ennext1"
@@ -69,7 +76,7 @@
             android:layout_marginRight="7dp"
             card_view:cardCornerRadius="2dp"
             card_view:contentPadding="10dp"
-            card_view:cardBackgroundColor="#99ccff">
+            card_view:cardBackgroundColor="#443661">
 
             <RelativeLayout
                 android:layout_width="fill_parent"
@@ -81,7 +88,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
                     android:textStyle="bold"
-                    android:textColor="#000000"
+                    android:textColor="#FFFFFF"
                     android:text="Meeting with Startup Founders"
                     android:textSize="15dp" />
 
@@ -93,7 +100,13 @@
                     android:layout_marginTop="15dp"
                     android:textSize="10dp"
                     android:text="@string/meeting_with_startup_founders"
-                    android:textColor="#000000" />
+                    android:textColor="#ffffff" />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_below="@+id/ennext2"
+                    android:layout_marginTop="5dp"
+                    android:background="#ffffff"/>
 
                 <ImageView
                     android:id="@+id/ennext2"
