--- a/app/src/main/res/layout/fragment_incubator_recognition.xml
+++ b/app/src/main/res/layout/fragment_incubator_recognition.xml
@@ -5,7 +5,8 @@
     android:layout_height="fill_parent"
     android:fillViewport="true"
     android:scrollbars = "vertical"
-    android:scrollbarStyle="insideInset">
+    android:scrollbarStyle="insideInset"
+    android:background="#0E0128">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:textColor="#000000"
+            android:textColor="#ffffff"
             android:text="Guideline"
             android:textSize="15dp"
             android:textStyle="bold"
@@ -37,7 +38,7 @@
             android:layout_marginRight="7dp"
             card_view:cardCornerRadius="20dp"
             card_view:contentPadding="10dp"
-            card_view:cardBackgroundColor="#000000">
+            card_view:cardBackgroundColor="#443661">
 
             <TextView
                 android:id="@+id/tv1"
@@ -55,7 +56,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:textColor="#000000"
+            android:textColor="#ffffff"
             android:text="Application"
             android:textSize="15dp"
             android:textStyle="bold"
@@ -75,7 +76,7 @@
             android:layout_marginRight="7dp"
             card_view:cardCornerRadius="20dp"
             card_view:contentPadding="10dp"
-            card_view:cardBackgroundColor="#000000">
+            card_view:cardBackgroundColor="#443661">
 
             <TextView
                 android:id="@+id/tv2"
@@ -93,7 +94,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:textColor="#000000"
+            android:textColor="#ffffff"
             android:text="Validation of Incubator Recognition"
             android:textSize="15dp"
             android:textStyle="bold"
@@ -113,7 +114,7 @@
             android:layout_marginRight="7dp"
             card_view:cardCornerRadius="20dp"
             card_view:contentPadding="10dp"
-            card_view:cardBackgroundColor="#000000">
+            card_view:cardBackgroundColor="#443661">
 
             <TextView
                 android:id="@+id/tv3"
