--- a/app/src/main/res/layout/fragment_meeting_with_startup_founders.xml
+++ b/app/src/main/res/layout/fragment_meeting_with_startup_founders.xml
@@ -5,7 +5,8 @@
     android:layout_height="fill_parent"
     android:fillViewport="true"
     android:scrollbars = "vertical"
-    android:scrollbarStyle="insideInset">
+    android:scrollbarStyle="insideInset"
+    android:background="@color/cardBackground">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -25,14 +26,14 @@
             android:layout_marginRight="7dp"
             card_view:cardCornerRadius="20dp"
             card_view:contentPadding="10dp"
-            card_view:cardBackgroundColor="#000000">
+            card_view:cardBackgroundColor="@color/cardColor">
 
             <TextView
                 android:id="@+id/tv1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
-                android:textColor="#ffffff"
+                android:textColor="@color/cardText"
                 android:text="Meeting with Startup Founders"
                 android:textSize="12dp" />
 
