--- a/app/src/main/res/layout/fragment_startup_india_services.xml
+++ b/app/src/main/res/layout/fragment_startup_india_services.xml
@@ -181,7 +181,7 @@
             android:layout_marginRight="7dp"
             card_view:cardCornerRadius="2dp"
             card_view:contentPadding="10dp"
-            card_view:cardBackgroundColor="#0E0128">
+            card_view:cardBackgroundColor="#443661">
 
             <RelativeLayout
                 android:layout_width="fill_parent"
