--- a/app/src/main/res/layout/fragment_startup_recognition.xml
+++ b/app/src/main/res/layout/fragment_startup_recognition.xml
@@ -6,7 +6,8 @@
     android:layout_height="fill_parent"
     android:fillViewport="true"
     android:scrollbars = "vertical"
-    android:scrollbarStyle="insideInset">
+    android:scrollbarStyle="insideInset"
+    android:background="#0E0128">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,7 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:textColor="#000000"
+            android:textColor="#ffffff"
             android:text="Application"
             android:textSize="15dp"
             android:textStyle="bold"
@@ -38,7 +39,7 @@
             android:layout_marginRight="7dp"
             card_view:cardCornerRadius="20dp"
             card_view:contentPadding="10dp"
-            card_view:cardBackgroundColor="#000000">
+            card_view:cardBackgroundColor="#443661">
 
                 <TextView
                     android:id="@+id/tv1"
@@ -56,7 +57,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:textColor="#000000"
+            android:textColor="#ffffff"
             android:text="Formats"
             android:textSize="15dp"
             android:textStyle="bold"
@@ -76,7 +77,7 @@
             android:layout_marginRight="7dp"
             card_view:cardCornerRadius="20dp"
             card_view:contentPadding="10dp"
-            card_view:cardBackgroundColor="#000000">
+            card_view:cardBackgroundColor="#443661">
 
                 <TextView
                     android:id="@+id/tv2"
@@ -101,7 +102,7 @@
             android:layout_marginRight="7dp"
             card_view:cardCornerRadius="20dp"
             card_view:contentPadding="10dp"
-            card_view:cardBackgroundColor="#000000">
+            card_view:cardBackgroundColor="#443661">
 
                 <TextView
                     android:id="@+id/tv3"
@@ -126,7 +127,7 @@
             android:layout_marginRight="7dp"
             card_view:cardCornerRadius="20dp"
             card_view:contentPadding="10dp"
-            card_view:cardBackgroundColor="#000000">
+            card_view:cardBackgroundColor="#443661">
 
             <TextView
                 android:id="@+id/tv4"
@@ -151,7 +152,7 @@
             android:layout_marginRight="7dp"
             card_view:cardCornerRadius="20dp"
             card_view:contentPadding="10dp"
-            card_view:cardBackgroundColor="#000000">
+            card_view:cardBackgroundColor="#443661">
 
             <TextView
                 android:id="@+id/tv5"
@@ -176,7 +177,7 @@
             android:layout_marginRight="7dp"
             card_view:cardCornerRadius="20dp"
             card_view:contentPadding="10dp"
-            card_view:cardBackgroundColor="#000000">
+            card_view:cardBackgroundColor="#443661">
 
             <TextView
                 android:id="@+id/tv6"
@@ -194,7 +195,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:textColor="#000000"
+            android:textColor="#ffffff"
             android:text="Validation of Startup Recognition"
             android:textSize="15dp"
             android:textStyle="bold"
@@ -214,7 +215,7 @@
             android:layout_marginRight="7dp"
             card_view:cardCornerRadius="20dp"
             card_view:contentPadding="10dp"
-            card_view:cardBackgroundColor="#000000">
+            card_view:cardBackgroundColor="#443661">
 
             <TextView
                 android:id="@+id/tv7"
@@ -232,7 +233,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:textColor="#000000"
+            android:textColor="#ffffff"
             android:text="Entities"
             android:textSize="15dp"
             android:textStyle="bold"
@@ -252,7 +253,7 @@
             android:layout_marginRight="7dp"
             card_view:cardCornerRadius="20dp"
             card_view:contentPadding="10dp"
-            card_view:cardBackgroundColor="#000000">
+            card_view:cardBackgroundColor="#443661">
 
             <TextView
                 android:id="@+id/tv8"
