--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="navigationBarColor">#000000</color>
     <color name="colorAccent">#c8e8ff</color>
     <color name="navigationBackground">#000000</color>
+    <color name="cardBackground">#0E0128</color>
+    <color name="cardColor">#443661</color>
+    <color name="cardText">#ffffff</color>
 </resources>
